--- a/_config.yml
+++ b/_config.yml
@@ -13,20 +13,24 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Searching for tech enlightment
+title: adamghill.com
 email: 
 description: >- # this means to ignore newlines until "baseurl:"
-  Writing is hard.
+  Searching for tech enlightenment
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://adamghill.com" # the base hostname & protocol for your site, e.g. http://example.com
+
 twitter_username: adamghill
 github_username:  adamghill
+rss: rss
 
 # Build settings
 markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
+google_analytics: UA-22319575-1
+show_excerpts: true
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
